--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <header>
     <h1>Birdwatching</h1>
     <img src="dove.png" alt="a simple dove logo" />
 
@@ -21,7 +22,7 @@
       <li><a href="#">Gear</a></li>
       <li><a href="#">Forum</a></li>
     </ul>
-
+  </header>
     <h2>Welcome</h2>
 
     <p>
