--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
     <h1>Birdwatching</h1>
     <img src="dove.png" alt="a simple dove logo" />
-
+    <nav>
     <ul>
       <li><span>Home</span></li>
       <li><a href="#">Get started</a></li>
@@ -22,7 +22,9 @@
       <li><a href="#">Gear</a></li>
       <li><a href="#">Forum</a></li>
     </ul>
+  </nav>
   </header>
+  <main>
     <h2>Welcome</h2>
 
     <p>
@@ -36,7 +38,6 @@
       So don't waste time! Get what you need, then turn off that computer and
       get out into the great outdoors!
     </p>
-
     <h2>Favourite photos</h2>
 
     <a href="favorite-1.jpg"
@@ -59,7 +60,7 @@
         src="favorite-4_th.jpg"
         alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
     /></a>
-
+  </main>
     <footer>
       <p>
         This fake website example is CC0 — any part of this code may be reused
