--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       So don't waste time! Get what you need, then turn off that computer and
       get out into the great outdoors!
     </p>
+    <aside>
     <h2>Favourite photos</h2>
 
     <a href="favorite-1.jpg"
@@ -60,6 +61,7 @@
         src="favorite-4_th.jpg"
         alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"
     /></a>
+  </aside>
   </main>
     <footer>
       <p>
